# Bound-Entangled-State

./: .gitignore  BEState2.ipynb  README.md  pyproject.toml
BES/: BEState2.ipynb  Bound  UPB .ipynb  Bound.ipynb  environment.yml
BES/BE_States_Results/: BE_State_d4_rank10.npy  BE_State_d4_rank11.npy  BE_State_d4_rank7.npy
BES/TASK1_TARGET_FILE/: BE_State_4x4_Rank10_0.npy  BE_State_4x4_Rank10_1.npy  BE_State_4x4_Rank11_1.npy  BE_State_4x4_Rank13_0.npy  BE_State_4x4_Rank13_1.npy  BE_State_4x4_Rank14_1.npy  BE_State_4x4_Rank16_0.npy  BE_State_4x4_Rank4_1.npy  BE_State_4x4_Rank6_1.npy  BE_State_4x4_Rank7_0.npy  BE_State_4x4_Rank7_1.npy  BE_State_4x4_Rank9_1.npy  BE_State_8x8_Rank4_1.npy
BES/TASK2_FILE_MAP/: BE_State_d5_rank4_0.npy  BE_State_d6_rank4_0.npy  BE_State_d8_rank4_0.npy
BES/qst_tec/: convex_optimization_cvx.py  gdproj.py
BES2/: BEState1.ipynb  BE_State_4x4_Rank4_1.npy  Bound.ipynb  LICENSE  README.md  requirements.txt
BES2/BE_States_Results/: BE_State_d4_rank12.npy  BE_State_d4_rank13.npy  BE_State_d4_rank14.npy  BE_State_d4_rank15.npy  BE_State_d4_rank16.npy  BE_State_d4_rank9.npy
BES2/qst_tec/: test_environment.py
data/BE_States_Results/: BE_State_d4_rank5.npy  BE_State_d4_rank6.npy  BE_State_d4_rank8.npy
data/TASK1_TARGET_FILE/: BE_State_4x4_Rank11_0.npy  BE_State_4x4_Rank12_0.npy  BE_State_4x4_Rank12_1.npy  BE_State_4x4_Rank14_0.npy  BE_State_4x4_Rank15_0.npy  BE_State_4x4_Rank15_1.npy  BE_State_4x4_Rank16_1.npy  BE_State_4x4_Rank4_0.npy  BE_State_4x4_Rank5_0.npy  (+7 more)
notebooks/: BEState1.ipynb  BEState2.ipynb  Bound.ipynb
src/qst_tec/: mlefu.py  (+8 more)
(+4 files in other folders)
