[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qst_tec"
version = "0.1.0"
description = "Quantum state tomography and bound entanglement optimization tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "qutip>=5.0.0",
    "cvxpy>=1.5.0",
    "jax>=0.4.23",
    "jaxlib>=0.4.23",
    "optax>=0.1.8",
    "tensorflow>=2.15.0",
    "tensorflow-addons>=0.23.0",
    "torch>=2.10.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "ipywidgets",
    "jupyterlab"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E203", "E731"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
